# transcripto-local

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  whisper_jni.cpp
app/src/main/java/com/transcripto/local/: MainActivity.kt
app/src/main/java/com/transcripto/local/audio/: AudioRecorder.kt
app/src/main/java/com/transcripto/local/data/: AppLogger.kt  AppState.kt  Recording.kt
app/src/main/java/com/transcripto/local/db/: AppDatabase.kt  Daos.kt  entities.kt
app/src/main/java/com/transcripto/local/export/: ExportManager.kt
app/src/main/java/com/transcripto/local/llm/: LlmEngine.kt
app/src/main/java/com/transcripto/local/models/: ModelManager.kt  ModelProfile.kt
app/src/main/java/com/transcripto/local/security/: AppLockManager.kt  CryptoManager.kt
app/src/main/java/com/transcripto/local/stt/: SttEngine.kt
app/src/main/java/com/transcripto/local/ui/: AnalyzeScreen.kt  RecordScreen.kt  SettingsScreen.kt  TranscribeScreen.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
docs/: native-build.md
scripts/: build_native.sh
tools/: gen_icons.py
